<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_game_details"
        android:icon="@drawable/ic_action_about"
        android:showAsAction="always"
        android:title="@string/game_details"
        android:visible="true" />

    <item
        android:id="@+id/menu_add_to_fave"
        android:icon="@drawable/ic_action_toggle_star_outline"
        android:showAsAction="always"
        android:title="@string/add_to_fave"
        android:visible="false" />

    <item
        android:id="@+id/menu_screenshots"
        android:showAsAction="never"
        android:title="@string/screenshots" />

    <item
        android:id="@+id/menu_upload_game_details"
        android:showAsAction="never"
        android:title="@string/upload_game_details" />

    <item
        android:id="@+id/menu_upload_achievements"
        android:showAsAction="never"
        android:title="@string/upload_achievements" />
</menu>
