<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:clipToPadding="false"
    android:paddingLeft="@dimen/padding_level_3"
    android:paddingRight="@dimen/padding_level_3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="@dimen/margin_level_4"
            android:src="@drawable/logo" />

        <org.cs15.xchievements.views.MavenProLightBoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_level_5"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/tv_level_1" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textSize="@dimen/tv_level_5" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_level_2"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textSize="@dimen/tv_level_5" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_level_2"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textSize="@dimen/tv_level_5" />

        <EditText
            android:id="@+id/et_gamertag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_level_2"
            android:hint="@string/gamertag"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/tv_level_5" />

        <Button
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_level_2"
            android:background="@drawable/login_button_selector"
            android:text="@string/register"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>